# simulacion-tp6

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
simulacion_tp6/: __main__.py  main.py
simulacion_tp6/helpers/: constantes.py  variables_aleatorias.py
simulacion_tp6/models/: resultados.py  simulacion.py
static/: resultados.xlsx
